更新 SmartFloatControl.astro

--- a/src/components/SmartFloatControl.astro
+++ b/src/components/SmartFloatControl.astro
@@ -13,7 +13,7 @@
             <a href="/" class="menu-item"><span>首页</span><div class="i-ri-home-5-line"></div></a>
             <a href="/posts" class="menu-item"><span>文章</span><div class="i-ri-article-line"></div></a>
             <a href="/about" class="menu-item"><span>关于</span><div class="i-ri-user-3-line"></div></a>
-            <a href="https://github.com/antfu" target="_blank" class="menu-item"><span>GitHub</span><div class="i-ri-github-line"></div></a>
+            <a href="https://github.com/yangtudou" target="_blank" class="menu-item"><span>GitHub</span><div class="i-ri-github-line"></div></a>
           </div>
         </div>
       </div>
